{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Player",
            "id": "1e49c367-af0c-4b06-80dc-d6562a69ce8d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1e93d2b3-81e0-4c03-ac7b-682352a4411b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "3be67264-cc22-443c-9794-e4c5c5b7015a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "6c75de19-fe4d-4fcf-97f1-72b028c4121e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "e0e8f98b-7a78-44f8-84d4-1171cebc7c7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c42569c2-3466-46d4-b619-2e3c2ab64beb",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abaaccf0-5a37-411a-a313-c76a0008ae30",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33cdcb3f-dfc7-48e7-aaba-c86eb5d117cf",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e9f52e4-ec8a-48b5-96b8-d2c409a2d7e1",
                    "path": "<Keyboard>/#(B)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Touch",
            "id": "e93c1b84-9072-4e81-a5e8-c87d27c735a9",
            "actions": [
                {
                    "name": "TouchScreen",
                    "type": "PassThrough",
                    "id": "c1a7ef6a-ac59-48a7-826e-76f6c679be51",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "24731baf-b98c-4c9f-8759-f869585387d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "6c35f807-bc1a-4060-8766-80c2d7a63d2e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f33d0860-0760-4000-8ced-2dee9ce9608d",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e65cd13c-8e0e-45d1-90ba-ccf79ed9b43b",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "349049c2-05df-4161-9f65-7355be151e43",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Special",
            "id": "922aa10c-7d5f-4bbb-837d-5db29d37b878",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c2bfed1d-1372-450c-9913-24a83ee8563b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Change",
                    "type": "Button",
                    "id": "a6d198d7-bedd-4336-94bc-57d779cc1f75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6114c439-2067-4c6e-8eeb-a302cf13d7ef",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17116df6-fc60-4eb0-b8f5-359f50876449",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Change",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}